[workspace]

members = ["cli", "crates/ike-fs", "crates/ike-toml", "crates/ike-logger", "crates/ike-core", "modules/web"]
resolver = "1"

[workspace.dependencies]
clap = { version = "4.5.11", features = ["derive"] }
anyhow = "1.0.86"
toml = "0.8.19"
serde = { version = "1", features = ["derive", "std"] }
thiserror = "1.0.63"
boa_engine = { git = "https://github.com/boa-dev/boa.git", features = ["annex-b"] }

# Creates
ike-fs = {version = "0.1.0", path = "crates/ike-fs"}
ike-toml = {version = "0.1.0", path = "crates/ike-toml"}
ike-logger = {version = "0.1.0", path = "crates/ike-logger"}
ike-core = {version = "0.1.0", path = "crates/ike-core"}

# Modules
web = {version = "0.1.0", path = "modules/web"}