[workspace]

members = [
    "cli",
    "crates/ike-fs",
    "crates/ike-toml",
    "crates/ike-logger",
    "crates/ike-core",
    "modules/web",
    "crates/proc/ike-function",
    "crates/proc/proc-test",
    "modules/fs",
]
resolver = "1"

[workspace.dependencies]
anyhow = "1.0.86"
toml = "0.8.19"
serde = { version = "1", features = ["derive", "std"] }
thiserror = "1.0.63"
boa_engine = { git = "https://github.com/boa-dev/boa.git", features = [
    "annex-b",
] }
smol = "2.0.1"
futures-util = "0.3.30"
tokio = { version = "1.39.3", features = ["full"] }
winapi = { version = '0.3.9', features = ["winbase"] }
url = { version = "2.5.2", features = ["serde"] }
serde_json = "1.0.68"

# Crates
ike-fs = { version = "0.1.0", path = "crates/ike-fs" }
ike-toml = { version = "0.1.0", path = "crates/ike-toml" }
ike-logger = { version = "0.1.0", path = "crates/ike-logger" }
ike-core = { version = "0.1.0", path = "crates/ike-core" }
ike-function = { version = "0.1.0", path = "crates/proc/ike-function" }

# Modules
web = { version = "0.1.0", path = "modules/web" }
fs = { version = "0.1.0", path = "modules/fs" }
