[package]
name = "ike"
version = "0.1.0"
edition = "2021"
default-run = "ike"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5.11", features = ["derive"] }
thiserror = "1.0.63"
tokio = { workspace = true }
ike-logger = { workspace = true }
chrono = "0.4.38"
boa_engine = { workspace = true }
anstyle = "1.0.7"
serde_json = "1.0.120"
derive_builder = "0.20.0"
os_info = "3.8.2"
regex = "1.10.5"
isahc = "1.7.2"
boa_gc = { git = "https://github.com/boa-dev/boa.git" }
simdutf = "0.4.17"
lazy_static = "1.5.0"
glob = "0.3.1"
oxc_resolver = "1.10.2"
once_cell = "1.19.0"
futures-util = { workspace = true }
toml = { workspace = true }
oxc_transformer = "0.24.2"
oxc_parser = "0.24.2"
oxc_span = "0.24.2"
oxc_allocator = "0.24.2"
oxc_codegen = "0.24.2"
ike-fs = { workspace = true }
ike-toml = { workspace = true }
indexmap = "2.3.0"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = [
    "v1",
    "v3",
    "v4",
    "v5",
    "v6",
    "v7",
    "v8",
] }
rustc-hash = "2.0.0"

ike-core = { workspace = true }

# Modules
web = { workspace = true }
fs = { workspace = true }
smol.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process", "user"] }
