[package]
name = "ike"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1", features = ["derive", "std"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
logger = { path = "../logger" }
chrono = "0.4.38"
boa_engine = { version = "0.19.0", features = ["annex-b"] }
anstyle = "1.0.7"
serde_json = "1.0.120"
derive_builder = "0.20.0"
os_info = "3.8.2"
regex = "1.10.5"
isahc = "1.7.2"
boa_gc = "0.19.0"
base64 = "0.22.1"
simdutf = "0.4.17"
lazy_static = "1.5.0"
glob = "0.3.1"
smol = "2.0.0"
oxc_resolver = "1.10.2"
once_cell = "1.19.0"
futures-util = "*"
url = "2.5.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process", "user"] }
