[package]
name = "ike"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5.11", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1", features = ["full"] }
logger = { path = "../logger" }
chrono = "0.4.38"
boa_engine = { git = "https://github.com/boa-dev/boa.git", features = ["annex-b"] }
anstyle = "1.0.7"
serde_json = "1.0.120"
derive_builder = "0.20.0"
os_info = "3.8.2"
regex = "1.10.5"
isahc = "1.7.2"
boa_gc = { git = "https://github.com/boa-dev/boa.git" }
base64 = "0.22.1"
simdutf = "0.4.17"
lazy_static = "1.5.0"
glob = "0.3.1"
smol = "2.0.0"
oxc_resolver = "1.10.2"
once_cell = "1.19.0"
futures-util = "*"
url = "2.5.2"
toml = { workspace = true }
oxc_transformer = "0.24.2"
oxc_parser = "0.24.2"
oxc_span = "0.24.2"
oxc_allocator = "0.24.2"
oxc_codegen = "0.24.2"
ike-fs = { path = "../ike-fs" }
ike-toml = { path = "../ike-toml" }
indexmap = "2.3.0"
urlencoding = "2.1.3"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["process", "user"] }
