[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
logger = { path = "../logger" }
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "multipart",
] }
tar = "0.4"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = { version = "0.8.14" }
anyhow = "1.0.86"
requestty = "0.5.0"
