[package]
name = "http"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
tokio = { workspace = true }
boa_engine = { workspace = true }
futures-util = { workspace = true }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

ike-core = { workspace = true }
ike-function = { workspace = true }
