[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
ike-core = { workspace = true }
ike-function = { workspace = true }
boa_engine = { workspace = true }
smol = { workspace = true }
futures-util = { workspace = true }
base64 = "0.22.1"
url = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "lib.rs"
